--- a/src/Components/news.css
+++ b/src/Components/news.css
@@ -1,3 +1,31 @@
+.search {
+  position: absolute;
+  top: 35vh;
+  left: 38vw;
+  width: 400px;
+  height: 2.5rem;
+  margin-top: 5px;
+  margin-bottom: 4rem;
+}
+
+.search img {
+  position: relative;
+  bottom: 45px;
+  left: 86%;
+}
+input {
+  position: relative;
+  box-sizing: border-box;
+  padding: 10px 30px 10px 10px;
+  width: 100%;
+  height: 100%;
+  border: 2px solid rgb(128, 144, 236);
+  border-radius: 20px;
+  outline: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 :root {
   --clr-gray-light: #d7dfe2;
   --clr-gray-med: #616b74;
