--- a/src/Components/news.css
+++ b/src/Components/news.css
@@ -88,7 +88,6 @@ input {
 .title {
   font-weight: bold;
   line-height: 1.5rem;
-  margin: 1rem 0 0.5rem;
 }
 
 .description {
@@ -102,27 +101,55 @@ input {
   text-decoration: none;
 }
 
-/*
-.box img {
+.weather {
   position: absolute;
-  object-fit: cover;
-  height: 14rem;
-  width: 100%;
-  
-  height: 100px;
-  top: 10px;
-  right: 30px;
+  top: 2rem;
+  left: 38vw;
+  width: 400px;
+  height: 2.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 350px;
+  height: 150px;
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  color: #d7dfe2;
 }
 
-.date {
-  font-size: 0.8rem;
-  font-weight: bold;
-  color: white;
-  background-color: red;
-  padding: 0.5rem 1.3rem 0.5rem 1rem;
-  position: absolute;
-  z-index: 1;
-  top: 1rem;
-  border-radius: 0 2rem 2rem 0;
+.weather-text {
+  margin: 1rem 0 0.5rem 1rem;
 }
-*/
+
+.ciudad {
+  margin-bottom: 5px;
+}
+
+.temperatura {
+  font-size: 3rem;
+  margin-left: 6rem;
+  margin-bottom: 5px;
+}
+
+.obtenido {
+  position: absolute;
+  top: 6rem;
+  left: 7rem;
+  object-fit: cover;
+  margin-top: 8px;
+}
+
+.humedad {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.weather img {
+  position: absolute;
+  top: 0px;
+  left: 13rem;
+  object-fit: cover;
+}
